@@ -4,6 +4,10 @@
 	* t/CairoSurface.t: Wrap cairo_surface_copy_page and
 	cairo_surface_show_page.
 
+	* CairoSurface.xs
+	* t/CairoSurface.t: Wrap cairo_ps_surface_restrict_to_level,
+	cairo_ps_get_levels, and cairo_ps_level_to_string.
+
 2007-12-29  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* Cairo.xs
